# online_cinema_api

./: .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
accounts/: models.py  serializers.py  views.py
books/: models.py  views.py
borrowing/: models.py  serializers.py  views.py
notifications/: signals.py  tasks.py  telegram.py
payment/: models.py  serializers.py  urls.py  views.py
src/: celery.py  settings.py  urls.py
tests/: test_models_accounts.py  test_models_payment.py  test_views_accounts.py  test_views_borrowing.py  test_views_payment.py
